# midi2hands

./: .gitignore  README.md  eval.py  eval_lstm.py  lstm.ipynb  lstm.py  main.ipynb  pyproject.toml  requirements.txt  train.py  train_gen_lstm.py  transformer.py  utils.py
archive/: train_lstm.py
cache/joblib/utils/extract_windows_from_files/: func_code.py
config/: discriminative_lstm.json  discriminative_transformer.json  generative_lstm.json  generative_transformer.json
models/: handformer.py  lstm.py
src/midi2hands/: config.py  eval.py  main.py  spec.py  train.py  utils.py
src/midi2hands/config/: generative_lstm.json
src/midi2hands/models/: generative.py  interface.py
src/midi2hands/models/mock/: model_mock.py
src/midi2hands/models/onnex/: model.onnx  onnex_model.py
src/midi2hands/models/torch/: lstm.py  torch_model.py  transformer.py
tests/: test_torch_models.py
tests/resources/: model.onnx
